adds questions to survey

--- a/css/main.css
+++ b/css/main.css
@@ -10,12 +10,12 @@ html {
     margin: 0;
     padding: 0;
   }
-  body{
-  margin-top: 2%;
-	padding: 2%;
+
+body{
 	letter-spacing: .015em;
 	background:#000;
 	height:100%;
+  width:100%
 }
 
 #description {
@@ -162,8 +162,44 @@ html {
     margin-bottom: 2%;
 }
 
+/* CSS for survey.html */
+.fa-frown{
+  color:#60D4FF;
+  margin: 20px;
+}
+.fa-meh{
+  color:#FFF600;
+  margin: 20px;
+}
+.fa-smile{
+  color:#8DFC91;
+  margin: 20px;
+}
 
-/*CSS for matches.html*/
+.btn.ans:focus {
+  box-shadow: none !important;
+  outline: 0 none !important;
+}
+
+.ans:hover {
+    background-color: #E8EEF2;
+}
+
+/* If the screen size is 601px wide or more, set the font-size of <div> to 80px */
+@media screen and (min-width: 768px) {
+p#q_block {
+    font-size: 50px;
+  }
+}
+
+/* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+@media screen and (max-width: 767px) {
+p#q_block {
+    font-size: 40px;
+  }
+}
+
+/* CSS for matches.html*/
 
 .carousel-item{
   background-color: white;
@@ -205,3 +241,104 @@ html {
 .hidden {
   display: none;
 }
+
+body {
+  font-family: sans-serif;
+  font-weight: 800;
+}
+.switch {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 150px;
+  height: 50px;
+  text-align: center;
+  margin: -30px 0 0 -75px;
+  background: #4cd964;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  border-radius: 25px;
+}
+.switch span {
+  position: absolute;
+  width: 20px;
+  height: 4px;
+  top: 50%;
+  left: 50%;
+  margin: -2px 0px 0px -4px;
+  background: #fff;
+  display: block;
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  border-radius: 2px;
+}
+.switch span:after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 4px;
+  height: 12px;
+  margin-top: -8px;
+  background: #fff;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  border-radius: 2px;
+}
+input[type=radio] {
+  display: none;
+}
+.switch label {
+  cursor: pointer;
+  color: rgba(0,0,0,0.2);
+  width: 60px;
+  line-height: 50px;
+  -webkit-transition: all 0.2s ease;
+  -moz-transition: all 0.2s ease;
+  -o-transition: all 0.2s ease;
+  -ms-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+label[for=yes] {
+  position: absolute;
+  left: 0px;
+  height: 20px;
+}
+label[for=no] {
+  position: absolute;
+  right: 0px;
+}
+#no:checked ~ .switch {
+  background: #ff3b30;
+}
+#no:checked ~ .switch span {
+  background: #fff;
+  margin-left: -8px;
+}
+#no:checked ~ .switch span:after {
+  background: #fff;
+  height: 20px;
+  margin-top: -8px;
+  margin-left: 8px;
+}
+#yes:checked ~ .switch label[for=yes] {
+  color: #fff;
+}
+#no:checked ~ .switch label[for=no] {
+  color: #fff;
+}
+
+/*CSS for survey.html*/
