--- a/css/main.css
+++ b/css/main.css
@@ -210,16 +210,12 @@ p#q_block {
     margin-bottom: 5%;
 }
 
-.carousel-control-next-icon:after {
-  content: '>';
-  font-size: 55px;
-  color: darkgray;
+.carousel-control-prev-icon {
+ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23aaa' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
 }
 
-.carousel-control-prev-icon:after {
-  content: '<';
-  font-size: 55px;
-  color: darkgray;
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23aaa' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
 }
 
 .bank {
@@ -236,10 +232,6 @@ p#q_block {
 
 .inner-card {
     margin:5%;
-}
-
-.hidden {
-  display: none;
 }
 
 body {
@@ -342,3 +334,13 @@ label[for=no] {
 }
 
 /*CSS for survey.html*/
+
+/*CSS for matches.html*/
+.card-columns {
+  @include media-breakpoint-only(lg) {
+    column-count: 4;
+  }
+  @include media-breakpoint-only(xl) {
+    column-count: 5;
+  }
+}
